--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -35,7 +35,7 @@
     <h4>完成した商店街の地上からの様子</h4>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
-           <tr align="center">
+           <tr align="center" valign="top">
              <th width="40%"><b>項目</b></th>
              <th width="60%"><b>内容</b></th>
            </tr>
