--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -35,7 +35,7 @@
     <h4>完成した商店街の地上からの様子</h4>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
-           <tr align="center" valign="top">
+           <tr align="center">
              <th width="40%"><b>項目</b></th>
              <th width="60%"><b>内容</b></th>
            </tr>
@@ -84,7 +84,7 @@
          <td>実際の活動について，機材の設定や資料の説明を挟みながら，１～４の項目に分けて時系列で説明していきます。まず，ホスト機のPCの設定を説明します。<br><b>設定について</b><br><ul>ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul></td>
      </tr>
       <tr>
-           <td>教師サイドで事前に準備した商店街の区画と店舗<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="52%"><img src="https://tkby.github.io/micra.github.io/shisakuhin.jpg" alt="試作店舗" width="48%"></td>
+           <td>教師サイドで事前に準備した商店街の区画と店舗<br><img src="https://tkby.github.io/micra.github.io/shotengai_shikichi.jpg" alt="八町大路敷地" width="100%"><br><img src="https://tkby.github.io/micra.github.io/shisakuhin.jpg" alt="試作店舗" width="100%"></td>
            <td>次に，活動に入る前の事前準備について説明します。<br><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><ul><li>商店街の区画の準備<ul><li>制作する店舗のスケール感の把握・商店街エリアの把握のために，商店街の区画は教師サイドで準備しました。<li>児童には町のマップと担当の店舗を伝えました。<li>店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul><li>店舗モデルの準備<ul><li>教師サイドで商店街の入り口にある1店舗を制作し，店舗制作のベンチマークとしました。</ul></td>
       </tr>
      　<tr>
@@ -96,8 +96,8 @@
     <td>活動がスタートすると，毎回の活動時にホスト機のPCでマルチプレイの設定が必要になりますので説明いたします。左の画像は25人に設定した場合です。<br><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>ホスト機でマルチプレイの設定をします。同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul><li>マルチプレイの通信環境について<ul>本事例では，学校の通信環境が時間帯によって不安定だったため，マインクラフトによる制作作業用に別途モバイルルーターでWifi環境を準備しました。</ul></ul></td> 
   </tr>
   <tr>
-    <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="50%"><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="50%"></td>
-    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？次は児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。<br><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><ul>ホスト機のPCがワールドを立ち上げたのを確認して次の①～③の作業をします。<li>接続手順<ul><li>①児童の制作用iPadのアプリを開きます。<li>②左画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>③右画像のようになりましたか？中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
+    <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="100%"></td>
+    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？次は児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。<br><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><ul>ホスト機のPCがワールドを立ち上げたのを確認して次の①～③の作業をします。<li>接続手順<ul><li>①児童の制作用iPadのアプリを開きます。<li>②左上画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>③左下画像のようになりましたか？画像中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
   </tr>
   
       <tr>
