--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -34,7 +34,42 @@
    <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上" width="90%"></div>
     <h4>完成した商店街の地上からの様子</h4>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
-     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+     
+   <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="10%"><b>設問</b></th>
+             <th width="30%"><b>分類</b></th>
+             <th width="50%"><b>内容</b></th>
+             <th width="10%"><b>スコア</b></th>
+           </tr>
+    <tr>
+     <td>15</td>
+     <td>収集力</td>
+     <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
+     <td>2.89</td>
+    </tr>
+    <tr>
+     <td>33</td>
+     <td>計画力</td>
+     <td>調べたりまとめたりしたことを振り返り，改善することは得意である。</td>
+     <td>2.89</td>
+    </tr>
+    <tr>
+     <td>22</td>
+     <td>整理力・比較力・分析力</td>
+     <td>ものごとの全体と中心をつなげて考えることは得意である。</td>
+     <td>3.08</td>
+    </tr>
+    <tr>
+     <td>35</td>
+     <td>表現力・伝達力</td>
+     <td>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</td>
+     <td>3.16</td>
+    </tr>
+    
+    </table>
+   
+   <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="40%"><b>項目</b></th>
              <th width="60%"><b>内容</b></th>
