--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -35,7 +35,7 @@
     <h4>完成した商店街の地上からの様子</h4>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
    <h4>「評価・改善する『情報活用能力』」の育成(注１）</h4>
-   <p>４４問からなる「情報活用能力チェックリスト」（注２）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。
+   <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="10%"><b>設問</b></th>
@@ -43,7 +43,8 @@
              <th width="30%"><b>分類</b></th>
              <th width="10%"><b>スコア</b></th>
            </tr>
-    
+    <a href ="https://https://tkby.github.io/micra.github.io/">「評価・改善する『情報活用能力』」の詳細はこちら</a>
+     <a href ="https://https://tkby.github.io/micra.github.io/">「情報活用能力チェックリスト」の詳細はこちら</a>  
     <tr>
      <td>15</td>
      <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
