--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -43,7 +43,7 @@
              <th width="30%"><b>分類</b></th>
              <th width="10%"><b>スコア</b></th>
             </tr>
-     <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。
+     <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
        <a href ="https://https://tkby.github.io/micra.github.io/">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
        <a href ="https://https://tkby.github.io/micra.github.io/">（注２）「情報活用能力チェックリスト」の詳細はこちら</a>  
  
