--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -35,19 +35,19 @@
     <p>完成した商店街の地上からの様子</p>
    <h2>マインクラフトを活用した授業で「評価・改善する『情報活用能力』」の育成</h2>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
-   <h3>「評価・改善する『情報活用能力』」の育成(注１）」</h3>
-    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問(にあたる力の育成と検証を試みました。</p>
+   <h3>「評価・改善する『情報活用能力』」の育成（注１）」</h3>
+    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
    
       <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="5%"><b>設問</b></th>
-             <th width="30%"><b>内容</b></th>
-             <th width="20%"><b>分類</b></th>
-             <th width="10%"><b>５月平均(４点満点）</b></th>
+             <th width="30%"><b>内容　※各設問は４点満点</b></th>
+             <th width="20%"><b>分類　※分類は（注２）のリンクを参照</b></th>
+             <th width="10%"><b>５月平均(n=38）</b></th>
               <th width="5%"><b>５月標準偏差</b></th>
-              <th width="10%"><b>11月平均(４点満点）</b></th>
+              <th width="10%"><b>11月平均(n=40）</b></th>
               <th width="5%"><b>11月標準偏差</b></th>
-              <th width="5%"><b>平均の伸び(４点満点）</b></th>
+              <th width="5%"><b>平均の伸び</b></th>
               <th width="5%"><b>p値</b></th>
             <th width="5%"><b>効果量d</b></th>
             </tr>
