--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -36,74 +36,7 @@
    <h2>マインクラフトを活用した授業で「評価・改善する『情報活用能力』」の育成</h2>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
    <h3>「評価・改善する『情報活用能力』」の育成（注１）」</h3>
-    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
-   
-      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
-           <tr align="center">
-             <th width="5%"><b>設問</b></th>
-             <th width="31%"><b>内容</b>　※各設問は４点満点</th>
-             <th width="17%"><b>分類</b>　※分類は（注２）のリンクを参照</th>
-             <th width="9%"><b>５月平均(n=38）</b></th>
-              <th width="5%"><b>５月標準偏差</b></th>
-              <th width="9%"><b>11月平均(n=40）</b></th>
-              <th width="5%"><b>11月標準偏差</b></th>
-              <th width="9%"><b>平均の伸び</b></th>
-              <th width="5%"><b>p値</b></th>
-            <th width="5%"><b>効果量d</b></th>
-            </tr>
-      <tr>
-     <td>15</td>
-     <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
-     <td>収集力</td>
-      <td>2.89</td>
-      <td>0.97</td>
-      <td>3.23</td>
-      <td>0.72</td>
-      <td>＋0.34</td>
-      <td>p=0.095</td>
-      <td>d=0.39</td>
-      </tr>
-    <tr>
-     <td>33</td>
-     <td>調べたりまとめたりしたことを振り返り，改善することは得意である。</td>
-     <td>計画力</td>
-      <td>2.89</td>
-      <td>0.94</td>
-      <td>3.25</td>
-      <td>0.83</td>
-      <td>＋0.36</td>
-      <td>p=0.084</td>
-     <td><b>d=0.40</b></td>
-    
-    </tr>
-    <tr>
-     <td>22</td>
-     <td>ものごとの全体と中心をつなげて考えることは得意である。</td>
-     <td>整理力・比較力・分析力</td>
-      <td>2.58</td>
-      <td>1.04</td>
-      <td>3.08</td>
-      <td>0.85</td>
-      <td>＋0.50</td>
-     <td><b>p=0.025</b></td>
-     <td><b>d=0.52</b></td>
-    </tr>
-    <tr>
-     <td>35</td>
-     <td>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</td>
-     <td>表現力・伝達力</td>
-      <td>3.16</td>
-      <td>0.71</td>
-      <td>3.05</td>
-      <td>0.87</td>
-      <td>－0.11</td>
-      <td>p=0.562</td>
-      <td>d=0.12</td>
-    </tr>    
-    </table>
-     <a href ="https://https://tkby.github.io/micra.github.io/">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
-       <a href ="https://https://tkby.github.io/micra.github.io/">（注２）「情報活用能力チェックリスト」の詳細はこちら</a>  
- 
+  <a href ="https://https://tkby.github.io/micra.github.io/hyokakaizen.html">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
     
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
