--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -36,7 +36,7 @@
    <h2>マインクラフトを活用した授業で「評価・改善する『情報活用能力』」の育成</h2>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
    <h3>「評価・改善する『情報活用能力』」の育成（注１）」</h3>
-  <a href ="https://https://tkby.github.io/micra.github.io/hyokakaizen.html">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
+  <a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
     <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
     
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
