--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -27,17 +27,19 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>マインクラフトを活用した授業で「評価・改善する『情報活用能力』」の育成</h1>
+   <h1>マインクラフトを活用した授業で情報活用能力の育成</h1>
    <h2>「地域の祭りと商店街をデジタルで表現しよう」</h2>
      <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図路上" width="90%"></div>
    <p>完成した商店街の上空からの様子</p>
    <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上" width="90%"></div>
     <p>完成した商店街の地上からの様子</p>
-   <h2>マインクラフトを活用した授業で「評価・改善する『情報活用能力』」の育成</h2>
-    <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
+   <h2>マインクラフトを活用した授業で情報活用能力の育成</h2>
+   <p>小学校の授業でマインクラフトを活用して，情報活用能力を育成する授業を行いました。活動のアウトラインは以下の通りです。</p>
+  
    <h3>「評価・改善する『情報活用能力』」の育成（注１）」</h3>
   <a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
-    <p>マインクラフトを活用して，情報活用能力を育成する活動です。実際に実施した事例をもとに，ポイントをまとめました。</p>
+    <h3>活動展開例</h3>
+   <p>実際に実施した事例をもとに，ポイントをまとめました。</p>
     
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
