--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -29,7 +29,7 @@
   <li>
    <h1>マインクラフトを活用した授業で情報活用能力の育成</h1>
    <h2>「地域の祭りと商店街をデジタルで表現しよう」</h2>
-   <p>生活科や社会科，総合的な学習の時間で地域の商店街についての学習がよく行われます。本事例は，高学年で「情報活用能力」の育成をねらって行われた活動です。本事例では，活動前と活動後に情報活用能力の実態調査を行い，その効果を検証しました。</p>
+   <p>生活科や社会科，総合的な学習の時間で地域の商店街についての学習がよく行われます。本事例は，高学年で「情報活用能力」の育成をねらって行われた活動です。活動前と活動後に情報活用能力の実態調査を行い，その効果を検証しました。</p>
      <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図路上" width="90%"></div>
    <p>完成した商店街の上空からの様子</p>
    <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上" width="90%"></div>
