--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -36,7 +36,25 @@
     <p>完成した商店街の地上からの様子</p>
    <h2>マインクラフトを活用した授業で情報活用能力の育成</h2>
    <p>小学校の授業でマインクラフトを活用して，情報活用能力を育成する授業を行いました。活動のアウトラインは以下の通りです。</p>
-  
+     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="40%"><b>アウトライン</b></th>
+             <th width="60%"><b>リンク</b></th>
+           </tr>
+      <tr>
+       <td>５月①情報活用能力の実態調査と事前授業</td>
+       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyo.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a>
+      </tr>
+  　　<tr>
+       <td>６月末～11月中旬②制作活動</td>
+       <td></td>
+      </tr>
+      <tr>
+       <td>10月末～11月中旬③評価・改善する「情報活用能力」の育成</td>
+       <td></td>
+      </tr><tr>
+      
+   </table>
    <h3>「評価・改善する『情報活用能力』」の育成（注１）」</h3>
   <a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">（注１）「評価・改善する『情報活用能力』」の詳細はこちら</a>
     <h3>活動展開例</h3>
