--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -46,7 +46,7 @@
       <tr>
        <td>５月</td>
         <td>①情報活用能力の実態調査と事前授業</td>
-       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyo.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a>
+       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a>
       </tr>
   　　<tr>
      <td>６月末～11月中旬</td>
