--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -45,17 +45,28 @@
            </tr>
       <tr>
        <td>５月</td>
-        <td>①情報活用能力の実態調査と事前授業</td>
+        <td>情報活用能力の実態調査</td>
        <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a>
       </tr>
   　　<tr>
-     <td>６月末～11月中旬</td>
-       <td> ②制作活動</td>
+     <td>６月</td>
+       <td> １．目標提示</td>
        <td></td>
       </tr>
+      　<tr>
+     <td>６月～</td>
+       <td> ２．制作活動</td>
+       <td></td>
+      </tr>
+      　<tr>
+     <td>11月</td>
+       <td> ３．制作物の評価・改善</td>
+       <td></td>
+      </tr>
+      
       <tr>
-       <td>10月末</td>
-       <td>～11月中旬③評価・改善する「情報活用能力」の育成</td>
+       <td>11月中旬</td>
+       <td>４.完成した商店街で祭りを表現</td>
        <td></td>
       </tr><tr>
       
