--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -49,17 +49,32 @@
        <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a>
       </tr>
   　　<tr>
-     <td>６月</td>
+       <td>５月末</td>
+       <td>機材の設定・準備</td>
+       <td></td>
+      </tr>
+      　<tr>
+     <td>６月上旬</td>
        <td> １．目標提示</td>
        <td></td>
       </tr>
       　<tr>
-     <td>６月～</td>
+      
+     <td>６月中旬～６月末</td>
+       <td> ２．制作活動</td>
+       <td></td>
+      </tr>
+      
+       <td>６月末～７月末</td>
+       <td> ２．制作活動</td>
+       <td></td>
+      </tr>
+     <td>10月末～11月中旬</td>
        <td> ２．制作活動</td>
        <td></td>
       </tr>
       　<tr>
-     <td>11月</td>
+     <td>11月上旬～11月中旬</td>
        <td> ３．制作物の評価・改善</td>
        <td></td>
       </tr>
