--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -33,7 +33,7 @@
    チェックリストの開発と評価</a>
    <p>※上記論文の最終ページに４４問の情報活用能力チェックリストが添付されています。</p>
      
-        
+       <a href="https://takalab.net/?page_id=2655">情報活用能力チェックリストについて（東京学芸大学　高橋　純　研究室）
  </li>
  </ul>
 
