--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -40,11 +40,9 @@
     </body>
    <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/Learning-by-Viscuit.github.io/kokugo/kokugo.html'">国語トップへ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/.html'">もとのページに戻る</button>
 </nav>
 <small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
-    <p class="CC">
-      <img src= "https://tkby.github.io/Learning-by-Viscuit.github.io/hyouji-hieiri-keisho.png" alt="　CC画像">
-      </p>
+   
 </footer>
   </html>
