--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -40,7 +40,7 @@
     </body>
    <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/.html'">もとのページに戻る</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/Shotengainew.html'">もとのページに戻る</button>
 </nav>
 <small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
    
