--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -46,7 +46,7 @@
       <tr>
        <td>５月</td>
         <td>情報活用能力の実態調査</td>
-       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a>
+       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a></td>
       </tr>
   　　<tr>
        <td>５月末</td>
@@ -76,7 +76,7 @@
       　<tr>
      <td>11月上旬～11月中旬</td>
        <td> ３．制作物の評価・改善</td>
-       <td></td>
+       <td><a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">評価・改善する情報活用能力について</a></td>
       </tr>
       
       <tr>
