--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -171,7 +171,7 @@
       </tr> 
     
       <tr>
-       <td>SD法によるプロフィール作成のアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"><br>①日常の商店街のプロフィール<br><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常プロフィール " width="100%"><br>②お祭り開催時の商店街のプロフィール<br><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵プロフィール " width="100%"><br>③マインクラフトで作成した商店街のプロフィール<br><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラプロフィール " width="100%"></td>
+       <td>SD法によるプロフィール作成のアンケート項目<br><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="イメージプロフィール " width="100%"></td>
        <td>本活動のように，マインクラフトで実際の店舗をもとにしてデフォルメした制作物を客観的に評価するのは，なかなか難しい側面があります。その解決法の１つとしてSD法によるプロフィール作成による手法を紹介いたします。<br><b>３．制作物の評価・改善（10月中旬～11月上旬）</b><ul><li>実際の商店街，祭り開催中の商店街，マインクラフトで制作した商店街のそれぞれのイメージを，SD法を使ってプロフィールにし，比較・分析の後，制作物の評価・改善を行いました。</ul></td>
       </tr>
          <tr>
