--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -41,7 +41,7 @@
            <tr align="center">
              <th width="15%"><b>時期</b></th>
              <th width="40%"><b>活動</b></th>
-             <th width="45%"><b>リンク</b></th>
+             <th width="45%"><b>詳細について</b></th>
            </tr>
       <tr>
        <td>５月</td>
