--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -40,13 +40,13 @@
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="15%"><b>時期</b></th>
-             <th width="40%"><b>活動</b></th>
-             <th width="45%"><b>詳細について</b></th>
+             <th width="30%"><b>活動</b></th>
+             <th width="55%"><b>詳細について</b></th>
            </tr>
       <tr>
        <td>５月</td>
         <td>情報活用能力の実態調査</td>
-       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室のものを活用）</a></td>
+       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室）に取り組み，児童の学習経験の深まり・情報活用能力の指導状況や，その体系を把握する</a></td>
       </tr>
   　　<tr>
        <td>５月末</td>
