--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -27,7 +27,9 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-  
+   <h3>情報活用能力チェックリスト</h3>
+   <a href="https://takalab.net/?page_id=2655">情報活用能力チェックリストについて（東京学芸大学　高橋　純　研究室）より引用</a>
+   
     <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
   <a href="https://www.jstage.jst.go.jp/article/jjet/advpub/0/advpub_45025/_pdf/-char/ja">情報活用能力指導の実施状況を把握するための
    チェックリストの開発と評価</a>
