--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -30,7 +30,8 @@
    <h3>情報活用能力チェックリスト</h3>
   <p>※下のリンクの論文の最終ページに４４問の情報活用能力チェックリストが添付されています。</p>
  <a href="https://www.jstage.jst.go.jp/article/jjet/advpub/0/advpub_45025/_pdf/-char/ja">情報活用能力指導の実施状況を把握するためのチェックリストの開発と評価</a>
-    <tr align="center">
+    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+   <tr align="center">
              <th width="5%"><b>設問</b></th>
              <th width="95%"><b>内容</b></th>
     </tr>
