--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -180,7 +180,7 @@
    </tr>
    <tr>
     <td>35</td>
-    <td>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</td>
+    <td><b>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</b></td>
    </tr>
    <tr>
     <td></td>
