--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -46,8 +46,7 @@
       <tr>
        <td>５月</td>
         <td>情報活用能力の実態調査</td>
-       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室）</a></td>
-       <p>に取り組み，児童の学習経験の深まり・情報活用能力の指導状況や，その体系を把握する。</p>
+       <td> <a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">情報活用能力チェックリスト（東京学芸大　高橋　純　研究室）</a>に取り組み，児童の学習経験の深まり・情報活用能力の指導状況や，その体系を把握する。</td>
       </tr>
   　　<tr>
        <td>５月末</td>
