--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -29,7 +29,7 @@
   <li>
    <h3>情報活用能力チェックリスト</h3>
   <p>※下のリンクの論文の最終ページに４４問の情報活用能力チェックリストが添付されています。</p>
- <a href="https://www.jstage.jst.go.jp/article/jjet/advpub/0/advpub_45025/_pdf/-char/ja">村上唯斗・野澤博孝・高橋純「情報活用能力指導の実施状況を把握するためのチェックリストの開発と評価」(2021)より引用</a>
+ <p><a href="https://www.jstage.jst.go.jp/article/jjet/advpub/0/advpub_45025/_pdf/-char/ja">村上唯斗・野澤博孝・高橋純「情報活用能力指導の実施状況を把握するためのチェックリストの開発と評価」(2021)</a>より引用</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
    <tr align="center">
              <th width="5%"><b>設問</b></th>
