--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -99,88 +99,88 @@
     <td></td>
     <td><b>問題解決・探究における情報活用</b></td>
    <tr>
-    <td>15</td>
-    <td><b>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</b></td>
+    <td><b>15</b></td>
+    <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
    </tr>
    <tr>
-    <td>16</td>
-    <td><b>見学やインタビューなどの調査方法で調べることは得意である。</b></td>
+    <td><b>16</b></td>
+    <td>見学やインタビューなどの調査方法で調べることは得意である。</td>
    </tr>
    <tr>
-    <td>17</td>
-    <td><b>地図や図書などの資料から調べることは得意である。</b></td>
+    <td><b>17</b></td>
+    <td>地図や図書などの資料から調べることは得意である。</td>
    </tr>
    <tr>
-    <td>18</td>
-    <td><b>実験や観察で調べることは得意である。</b></td>
+    <td><b>18</b></td>
+    <td>実験や観察で調べることは得意である。</td>
    </tr>
    <tr>
-    <td>19</td>
-    <td><b>ものごとを比べて，似たようなことや違うことを考えることは得意である。</b></td>
+    <td><b>19</b></td>
+    <td>ものごとを比べて，似たようなことや違うことを考えることは得意である。</td>
    </tr>
    <tr>
-    <td>20</td>
-    <td><b>ものごとを，時間や大切さなどの順序で考えることは得意である。</b></td>
+    <td><b>20</b></td>
+    <td>ものごとを，時間や大切さなどの順序で考えることは得意である。</td>
    </tr>
     <tr>
-    <td>21</td>
-    <td><b>考えとその理由をつなげて考えることは得意である。</b></td>
+    <td><b>21</b></td>
+    <td>考えとその理由をつなげて考えることは得意である。</td>
    </tr>
    <tr>
-    <td>22</td>
-    <td><b>ものごとの全体と中心をつなげて考えることは得意である。</b></td>
+    <td><b>22</b></td>
+    <td>ものごとの全体と中心をつなげて考えることは得意である。</td>
    </tr>
    <tr>
-    <td>23</td>
-    <td><b>ものごとの原因と結果をつなげて考えることは得意である。</b></td>
+    <td><b>23</b></td>
+    <td>ものごとの原因と結果をつなげて考えることは得意である。</td>
    </tr>
    <tr>
-    <td>24</td>
-    <td><b>ものごとを分類して考えることは得意である。</b></td>
+    <td><b>24</b></td>
+    <td>ものごとを分類して考えることは得意である。</td>
    </tr>
    <tr>
-    <td>25</td>
-    <td><b>ものごとを分解したり，まとめたりして考えることは得意である。</b></td>
+    <td><b>25</b></td>
+    <td>ものごとを分解したり，まとめたりして考えることは得意である。</td>
    </tr>
    <tr>
-    <td>26</td>
-    <td><b>調べたことを簡単な絵や図に整理することは得意である。</b></td>
+    <td><b>26</b></td>
+    <td>調べたことを簡単な絵や図に整理することは得意である。</td>
    </tr>
    <tr>
-    <td>27</td>
-    <td><b>調べたことを表やグラフに整理することは得意である。</b></td>
+    <td><b>27</b></td>
+    <td>調べたことを表やグラフに整理することは得意である。</td>
    </tr>
    <tr>
-    <td>28</td>
-    <td><b>資料から，特徴，傾向，変化を読み取ることは得意である。</b></td>
+    <td><b>28</b></td>
+    <td>資料から，特徴，傾向，変化を読み取ることは得意である。</td>
    </tr>
    <tr>
-    <td>29</td>
-    <td><b>自分や他人が調べたり考えたりしたことを組み合わせて，まとめることは得意である。</b></td>
+    <td><b>29</b></td>
+    <td>自分や他人が調べたり考えたりしたことを組み合わせて，まとめることは得意である。</td>
    </tr>
    <tr>
-    <td>30</td>
-    <td><b>文や写真，動画などを組み合わせて，まとめることは得意である。</b></td>
+    <td><b>30</b></td>
+    <td>文や写真，動画などを組み合わせて，まとめることは得意である。</td>
    </tr>
     <tr>
-    <td>31</td>
-    <td><b>声の大きさや間の取り方を工夫して発表することは得意である。</b></td>
+    <td><b>31</b></td>
+    <td>声の大きさや間の取り方を工夫して発表することは得意である。</td>
    </tr>
    <tr>
-    <td>32</td>
-    <td><b>調べたりまとめたりする計画を立てることは得意である。</b></td>
+    <td><b>32</b></td>
+    <td>調べたりまとめたりする計画を立てることは得意である。</td>
    </tr>
    <tr>
-    <td>33</td>
-    <td><b>調べたりまとめたりしたことを振り返り，改善することは得意である。</b></td>
+    <td><b>33</b></td>
+    <td>調べたりまとめたりしたことを振り返り，改善することは得意である。</td>
    </tr>
    <tr>
-    <td>34</td>
-    <td><b>インターネットや新聞が伝える情報には，発信者の意図が含まれていることをよく考えるようにしている。</b></td>
+    <td><b>34</b></td>
+    <td>インターネットや新聞が伝える情報には，発信者の意図が含まれていることをよく考えるようにしている。</td>
    </tr>
    <tr>
-    <td>35</td>
-    <td><b>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</b></td>
+    <td><b>35</b></td>
+    <td>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</td>
    </tr>
    <tr>
     <td></td>
