--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -223,7 +223,7 @@
     <td>インターネットはみんなのものであるということをよく考えるようにしている。</td>
    </tr>
   </table>
-    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査により「問題解決・探究における情報活用（設問15～35）」が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
+    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査を実施（2021年５月）した結果，<b>「問題解決・探究における情報活用（設問15～35）」</b>が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
     
   
     
