--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -224,10 +224,32 @@
    </tr>
   </table>
     <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査を実施（2021年５月）した結果，<b>「問題解決・探究における情報活用（設問15～35）」</b>が弱いことがわかり，以下の設問にあたる力の育成と検証を試みました。</p>
-    
-  
-    
-       <a href="https://takalab.net/?page_id=2655">情報活用能力チェックリストについて（東京学芸大学　高橋　純　研究室）
+ <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+   <tr align="center">
+             <th width="5%"><b>設問</b></th>
+             <th width="75%"><b>内容</b></th>   
+             <th width="10%"><b>スコア</b></th> 
+             <th width="10%"><b>平均との差</b></th> 
+    </tr>
+  <tr>
+   <td>22</td>
+   <td>ものごとの全体と中心をつなげて考えることは得意である。</td>
+    <td>2.48</td>
+   <td>-0.53</td>
+  </tr>
+   <tr>
+    <td>25</td>
+    <td>ものごとを分解したり，まとめたりして考えることは得意である。</td>
+  </tr>
+  <tr>
+   <td>33</td>
+   <td>調べたりまとめたりしたことを振り返り，改善することは得意である。</td>
+  </tr>
+  </table>
+   
+   
+   
+   <a href="https://takalab.net/?page_id=2655">情報活用能力チェックリストについて（東京学芸大学　高橋　純　研究室）
  </li>
  </ul>
 
