--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -37,7 +37,7 @@
     </tr>
    <tr>
     <td></td>
-    <td>情報と情報技術の適切な活用</td>
+    <td>情報と情報技術の適切な活用（平均2.95点）</td>
    </tr>
    <tr>
     <td>1</td>
@@ -97,7 +97,7 @@
    </tr>
    <tr>
     <td></td>
-    <td><b>問題解決・探究における情報活用</b></td>
+    <td><b>問題解決・探究における情報活用（平均2.79点)</b></td>
    <tr>
     <td><b>15</b></td>
     <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
@@ -184,7 +184,7 @@
    </tr>
    <tr>
     <td></td>
-    <td>情報モラル　情報セキュリティ</td>
+    <td>情報モラル　情報セキュリティ（平均3.24点）</td>
    </tr>
    <tr>
     <td>36</td>
@@ -228,8 +228,8 @@
    <tr align="center">
              <th width="5%"><b>設問</b></th>
              <th width="75%"><b>内容</b></th>   
-             <th width="10%"><b>スコア</b></th> 
-             <th width="10%"><b>平均との差</b></th> 
+             <th width="10%"><b>平均</b></th> 
+             <th width="10%"><b>全平均との差</b></th> 
     </tr>
   <tr>
    <td>22</td>
