--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -53,7 +53,7 @@
    </tr>
    <tr>
     <td>4</td>
-    <td>ファイルを保存して，フォルダにせいりすることは得意である。</td>
+    <td>ファイルを保存して，フォルダに整理することは得意である。</td>
    </tr>
    <tr>
     <td>5</td>
