--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -27,7 +27,9 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h3>情報活用能力チェックリスト</h3>
+   <h2>情報活用能力に関する現状</h2>
+   <p>平成29年度３月に告示された小学校学習指導要領の総則では，「情報活用能力」を<b>言語能力，問題発見・解決能力等と同じく「学習の基盤となる資質・能力」</b>としている。</p>
+   <p>また，児童の発達段階を考慮し，<b>「各教科等の特質を生かし，教科横断的な視点から教育過程の編成を図る」</b>としている。</p>
   <p>※下のリンクの論文の最終ページに４４問の情報活用能力チェックリストが添付されています。</p>
  <p><a href="https://www.jstage.jst.go.jp/article/jjet/advpub/0/advpub_45025/_pdf/-char/ja">村上唯斗・野澤博孝・高橋純「情報活用能力指導の実施状況を把握するためのチェックリストの開発と評価」(2021)</a>より引用</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
