--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -253,7 +253,7 @@
   </tr>
   </table>
    
-   <p>問22と問33は，<b>調べたことをデジタルで表現し，改善を重ねていく活動</b>で，問25,問33は，<b>プログラミング活動</b>で育成できると考える。</p>
+   <p>問22と問33は，<b>調べたことをデジタルで表現し，改善を重ねていく活動</b>で，問25,問33は，<b>プログラミング活動</b>で育成できると考えました。</p>
    
    
    <a href="https://takalab.net/?page_id=2655">情報活用能力チェックリストについて（東京学芸大学　高橋　純　研究室）
