--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -263,7 +263,9 @@
     </body>
    <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/Shotengainew.html'">もとのページに戻る</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/hyokakaizen.html'">評価・改善する情報活用能力ページへ移動</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/Shotengainew.html'">トップページへ移動</button>
+
 </nav>
 <small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
    
