--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -39,7 +39,7 @@
     </tr>
    <tr>
     <td></td>
-    <td>情報と情報技術の適切な活用（平均2.95点）</td>
+    <td>情報と情報技術の適切な活用</td>
    </tr>
    <tr>
     <td>1</td>
@@ -99,7 +99,7 @@
    </tr>
    <tr>
     <td></td>
-    <td><b>問題解決・探究における情報活用（平均2.79点)</b></td>
+    <td><b>問題解決・探究における情報活用</b></td>
    <tr>
     <td><b>15</b></td>
     <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
@@ -186,7 +186,7 @@
    </tr>
    <tr>
     <td></td>
-    <td>情報モラル　情報セキュリティ（平均3.24点）</td>
+    <td>情報モラル　情報セキュリティ</td>
    </tr>
    <tr>
     <td>36</td>
@@ -225,7 +225,7 @@
     <td>インターネットはみんなのものであるということをよく考えるようにしている。</td>
    </tr>
   </table>
-    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査を実施（2021年５月）した結果，<b>「問題解決・探究における情報活用（設問15～35）」</b>が弱いことがわかりました。そこからさらに分析すると以下の設問にあたる力のスコアが低いことが分かったので，その力の育成と効果の検証をしました。</p>
+    <p>４４問からなる「情報活用能力チェックリスト」（注２:東京学芸大学　高橋純　研究室）による実態調査を実施（2021年５月）した結果，<b>「問題解決・探究における情報活用」（設問15～35：平均2.79点）」</b>が「情報と情報技術の適切な活用（設問１～14：平均2.95点）」と「情報モラル・情報セキュリティ（設問36～44：平均3.24点）」に比べて低いことがわかりました。そこからさらに分析すると以下の設問にあたる力のスコアが低いことが分かったので，その力の育成と効果の検証をしました。</p>
  <table border="1"cellspacing="0" bordercolor="#333" width="100%">
    <tr align="center">
              <th width="5%"><b>設問</b></th>
