--- a/youshi.html
+++ b/youshi.html
@@ -43,13 +43,10 @@
  </ul>
 
     </body>
-   <footer>
-<nav>
+   
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   <nav>
 <button type="button" onclick="location.href='https://tkby.github.io/Learning-by-Viscuit.github.io/kokugo/kokugo.html'">国語トップへ</button>
 </nav>
-<small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
-    <p class="CC">
-      <img src= "https://tkby.github.io/Learning-by-Viscuit.github.io/hyouji-hieiri-keisho.png" alt="　CC画像">
-      </p>
-</footer>
   </html>
