--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -66,16 +66,16 @@
       </tr>
       
        <td>６月末～７月末</td>
-       <td> ２．制作活動</td>
+       <td> ２．制作活動（続き）</td>
        <td></td>
       </tr>
      <td>10月末～11月中旬</td>
-       <td> ２．制作活動</td>
+       <td> ２．制作活動（続き）</td>
        <td></td>
       </tr>
       　<tr>
      <td>11月上旬～11月中旬</td>
-       <td> ３．制作物の評価・改善</td>
+       <td> ３．制作物の評価・改善（制作活動と並行して）</td>
        <td><a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">評価・改善する情報活用能力について</a></td>
       </tr>
       
