--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -51,7 +51,7 @@
   　　<tr>
        <td>５月末</td>
        <td>機材の設定・準備</td>
-       <td></td>
+       <td>ワールドの区画・モデル店舗を教師サイドで準備。活動に便利なマップ等，情報収集。機器の接続チェック。Wi-Fi環境の準備，等</td>
       </tr>
       　<tr>
      <td>６月上旬</td>
