--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -76,7 +76,7 @@
       　<tr>
      <td>11月上旬～11月中旬</td>
        <td> ３．制作物の評価・改善（制作活動と並行して）</td>
-       <td><a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">評価・改善する「情報活用能力」</a>を育成するSD法によるプロフィールを活用した意見の交流と制作物の振り返り。振り返り後の改善・修正。</td>
+       <td>SD法によるプロフィールを活用した意見の交流と制作物の振り返りで<a href ="https://tkby.github.io/micra.github.io/hyokakaizen.html">評価・改善する「情報活用能力」</a>を育成する。振り返り後の改善・修正。</td>
       </tr>
       
       <tr>
