--- a/kagami.html
+++ b/kagami.html
@@ -41,22 +41,28 @@ img{
         <li>
           <h2>要旨</h2>
             <h3>Ⅰ研究の背景と目的</h3>
-                <h4>1 研究の背景</h4>
+                <h3>1 研究の背景</h3>
                     <ul>(1)情報活用能力に関する現状<li>①国内の動向②「情報活用能力」に関する所属校児童の実態</ul>
                         <h3>2 研究の目的</h3>
                         <h3>3 先行研究</h3>
                     <ul><li>(1)ICT活用について<li>(2)「評価・改善する『情報活用能力』」について</ul>
              <h3>Ⅱ　仮説</h3>
              <h3>Ⅲ　研究の方法と内容</h3>
-                     <h3>Ⅲ-1 プログラミング活動について<ul><li>(1)実態調査１・２の対象と期間<li>(2)検証授業(第１回～４回）<li>検証方法<ul><li>①第２回情報活用能力チェックリスト<li>②例題プログラム<li>③応用テスト<li>④プログラミングスキルチェック<li>⑤<li>授業観察・制作物</ul></h3>
-                     <h3>Ⅳ-1 結果<ul><li>(1)情報活用能力チェックリストの結果より<li>(2)例題とプログラム完成率より<li>(3)応用テストプログラム完成率より<li>(4)プログラミングスキルチェックより<li>(5)授業観察・制作物より</ul></h3>
-           <h3>Ⅴ-1　考察<ul><li>(1)「評価・改善する『情報活用能力』」のたかまり<li>(2)「随時振り返り」と「総括振り返り」の違い</ul></h3>
-                        
-                        <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について<ul><li>(1)実態調査１・２の対象と期間<li>(2)検証授業（第１回～３回）<li>(3)検証方法<ul><li>①第２回情報活用能力チェックリスト<li>②授業観察・制作物・記述</ul></h3>
-           <h3>Ⅳ-2 結果<ul><li>(1)情報活用」能力チェックリストの結果より<li>(2)商店街と制作物のプロフィールによる振り返りより<li>(3)児童の記述より</ul></h3>
-           <h3>Ⅴ-2 考察<ul><li>(1)「評価・改善する『情報活用能力』の高まり<li>(2)有効だった振り返り<ul><li>①パフォーマンス評価による振り返り<li>②SD法によるプロフィールを活用した振り返り<li>③作文による振り返り</ul></ul></h3>
-                           <h3>Ⅵ　まとめ<ul><li>1 正解<li>2 課題</ul></h3>
-                           <h4>注釈及び引用・参考文献</h4>
+             <h3>Ⅲ-1 プログラミング活動について</h3>
+                  <ul><li>(1)実態調査１・２の対象と期間<li>(2)検証授業(第１回～４回）<li>(3)検証方法<ul><li>①第２回情報活用能力チェックリスト<li>②例題プログラム<li>③応用テスト<li>④プログラミングスキルチェック<li>⑤<li>授業観察・制作物</ul>
+           <h3>Ⅳ-1 結果</h3>
+                  <ul><li>(1)情報活用能力チェックリストの結果より<li>(2)例題とプログラム完成率より<li>(3)応用テストプログラム完成率より<li>(4)プログラミングスキルチェックより<li>(5)授業観察・制作物より</ul>
+           <h3>Ⅴ-1　考察</h3>
+                     <ul><li>(1)「評価・改善する『情報活用能力』」のたかまり<li>(2)「随時振り返り」と「総括振り返り」の違い</ul>
+           <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
+                     <ul><li>(1)実態調査１・２の対象と期間<li>(2)検証授業（第１回～３回）<li>(3)検証方法<ul><li>①第２回情報活用能力チェックリスト<li>②授業観察・制作物・記述</ul>
+           <h3>Ⅳ-2 結果</h3>
+                      <ul><li>(1)情報活用」能力チェックリストの結果より<li>(2)商店街と制作物のプロフィールによる振り返りより<li>(3)児童の記述より</ul>
+           <h3>Ⅴ-2 考察</h3>
+                      <ul><li>(1)「評価・改善する『情報活用能力』の高まり<li>(2)有効だった振り返り<ul><li>①パフォーマンス評価による振り返り<li>②SD法によるプロフィールを活用した振り返り<li>③作文による振り返り</ul></ul>
+            <h3>Ⅵ　まとめ</h3>
+                       <ul><li>1 正解<li>2 課題</ul>
+            <h3>注釈及び引用・参考文献</h3>
         </li>
         </ul>
 <footer>
