--- a/kagami.html
+++ b/kagami.html
@@ -39,30 +39,30 @@ img{
      <h1>評価・改善する「情報活用能力」の育成</h1>
         <ul class="box-list"> 
         <li>
-          <h2>要旨<a href =""></a></h2>
-            <h3>Ⅰ研究の背景と目的<a href =""></h3>
-                <h3>1 研究の背景<a href =""></a></h3>
-                    <ul>(1)情報活用能力に関する現状<a href =""></a><li>①国内の動向<a href =""></a>②「情報活用能力」に関する所属校児童の実態<a href =""></a></ul>
-                        <h3>2 研究の目的<a href =""></a></h3>
-                        <h3>3 先行研究<a href =""></a></h3>
-                    <ul><li>(1)ICT活用について<a href =""></a><li>(2)「評価・改善する『情報活用能力』」について<a href =""></a></ul>
-             <h3>Ⅱ　仮説<a href =""></a></h3>
-             <h3>Ⅲ　研究の方法と内容<a href =""></a></h3>
-             <h3>Ⅲ-1 プログラミング活動について<a href =""></a></h3>
-                  <ul><li>(1)実態調査１・２の対象と期間<a href =""></a><li>(2)検証授業(第１回～４回）<a href =""></a><li>(3)検証方法<a href =""></a><ul><li>①第２回情報活用能力チェックリスト<a href =""></a><li>②例題プログラム<a href =""></a><li>③応用テスト<a href =""></a><li>④プログラミングスキルチェック<a href =""></a><li>⑤<li>授業観察・制作物<a href =""></a></ul>
-           <h3>Ⅳ-1 結果<a href =""></a></h3>
-                  <ul><li>(1)情報活用能力チェックリストの結果より<a href =""></a><li>(2)例題とプログラム完成率より<a href =""></a><li>(3)応用テストプログラム完成率より<a href =""></a><li>(4)プログラミングスキルチェックより<a href =""></a><li>(5)授業観察・制作物より<a href =""></a></ul>
-           <h3>Ⅴ-1　考察<a href =""></a></h3>
-                     <ul><li>(1)「評価・改善する『情報活用能力』」のたかまり<a href =""></a><li>(2)「随時振り返り」と「総括振り返り」の違い<a href =""></a></ul>
-           <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について<a href =""></a></h3>
-                     <ul><li>(1)実態調査１・２の対象と期間<a href =""></a><li>(2)検証授業（第１回～３回）<a href =""></a><li>(3)検証方法<a href =""></a><ul><li>①第２回情報活用能力チェックリスト<a href =""></a><li>②授業観察・制作物・記述<a href =""></a></ul>
-           <h3>Ⅳ-2 結果<a href =""></a></h3>
-                      <ul><li>(1)情報活用」能力チェックリストの結果より<a href =""></a><li>(2)商店街と制作物のプロフィールによる振り返りより<a href =""></a><li>(3)児童の記述より<a href =""></a></ul>
-           <h3>Ⅴ-2 考察<a href =""></a></h3>
-                      <ul><li>(1)「評価・改善する『情報活用能力』の高まり<a href =""></a><li>(2)有効だった振り返り<a href =""></a><ul><li>①パフォーマンス評価による振り返り<a href =""></a><li>②SD法によるプロフィールを活用した振り返り<a href =""></a><li>③作文による振り返り<a href =""></a></ul></ul>
-            <h3>Ⅵ　まとめ<a href =""></a></h3>
-                       <ul><li>1 成果<a href =""></a><li>2 課題<a href =""></a></ul>
-            <h3>注釈及び引用・参考文献<a href =""></a></h3>
+          <h2>要旨<a href ="https://tkby.github.io/micra.github.io/kagami.html">GO！</a></h2>
+            <h3>Ⅰ研究の背景と目的<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</h3>
+                <h3>1 研究の背景<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                    <ul>(1)情報活用能力に関する現状<a href ="https://tkby.github.io/micra.github.io/jouhokatsuyocheck.html">GO！</a><li>①国内の動向<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a>②「情報活用能力」に関する所属校児童の実態<a href ="">GO！</a></ul>
+                        <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                        <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                    <ul><li>(1)ICT活用について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)「評価・改善する『情報活用能力』」について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+             <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+             <h3>Ⅲ　研究の方法と内容<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+             <h3>Ⅲ-1 プログラミング活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                  <ul><li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><ul><li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>⑤<li>授業観察・制作物<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+           <h3>Ⅳ-1 結果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                  <ul><li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html"></a><li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html"></a><li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(5)授業観察・制作物より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+           <h3>Ⅴ-1　考察<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                     <ul><li>(1)「評価・改善する『情報活用能力』」のたかまり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+           <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                     <ul><li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html"></a><li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html"></a><ul><li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>②授業観察・制作物・記述<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+           <h3>Ⅳ-2 結果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                      <ul><li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+           <h3>Ⅴ-2 考察<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                      <ul><li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html"></a><ul><li>①パフォーマンス評価による振り返り<a href =""></a><li>②SD法によるプロフィールを活用した振り返り<a href =""></a><li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul></ul>
+            <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
+                       <ul><li>1 成果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a><li>2 課題<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></ul>
+            <h3>注釈及び引用・参考文献<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">GO！</a></h3>
         </li>
         </ul>
 <footer>
