--- a/kagami.html
+++ b/kagami.html
@@ -39,7 +39,7 @@ img{
      <h1>評価・改善する「情報活用能力」の育成</h1>
         <ul class="box-list"> 
         <li>
-          <h2>要旨<a href ="https://tkby.github.io/micra.github.io/.html">→</a></h2>
+          <h2>要旨<a href ="https://tkby.github.io/micra.github.io/youshi.html">→</a></h2>
             <h3>Ⅰ研究の背景と目的<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
             <h3>1 研究の背景<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                     <ul>(1)情報活用能力に関する現状<a href ="https://tkby.github.io/micra.github.io/jouhokatsuyocheck.html">→</a>
