--- a/inyosanko.html
+++ b/inyosanko.html
@@ -17,17 +17,90 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>評価・改善する「情報活用能力」の育成</h1>
+   <h1>引用文献・参考文献</h1>
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
-             <th width="30%"><b>キーワード</b></th>
-             <th width="70%"><b>要旨</b></th>
-                </tr>
+             <th width="30%"><b>著者</b></th>
+             <th width="60%"><b>タイトル</b></th>
+           　 <th width="10%"><b>年</b></th>
+            </tr>
   
   <tr>
-   <td>ICT活用　プログラミング教育　情報活用能力　評価・改善　教科横断的な学習　問題解決学習</td>
-   <td>本研究では，プログラミング活動と地域の祭りをデジタルで表現する活動において，本校児童の課題をつかみ，振り返り活動を工夫した授業を行うことで，自らの情報活用を適切に評価・改善する児童を育成できるかを検討した。<br>前者の活動では，振り返りを１単位時間の中で場面を変えて２パターンの授業を設定した。後者の活動では，授業の段階に応じて振り返りを工夫した授業を設定した。活動の効果を分析した結果，どちらの活動でも自ら評価・改善をして，適切な情報活用ができる児童を育むことができ，それぞれの授業の特徴や効果も明らかになった。</td>
+   <td>水本　篤　竹内　理</td>
+   <td>研究論文における効果量の報告のために-基礎的概念と注意点-</td>
+   <td>2008</td>
   </tr>
+    <tr>
+   <td>山口　禎恵</td>
+   <td>Minecraft　Education Editionを活用した授業【自立活動】</td>
+   <td>2017</td>
+  </tr>
+    <tr>
+   <td>川手くるみ　尾崎剛　広瀬啓雄</td>
+   <td>論理的思考力を重視した初等中等教育におけるプログラミング教育</td>
+   <td>2018</td>
+  </tr>
+    <tr>
+   <td>渡辺勇士</td>
+   <td>未就学児を対象としたプログラミング教育に関する研究</td>
+   <td>2021</td>
+  </tr>
+    <tr>
+   <td>石井康夫　大久保あかね　鈴木大介</td>
+   <td>商店街における来街者のイメージ調査に関する比較研究-静岡県富士市における事例-</td>
+   <td>2021</td>
+  </tr>
+    <tr>
+   <td>室真紀子</td>
+   <td>話し合う力の変容を時間できる生徒の育成-振り返りの分析を通して-</td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    <tr>
+   <td></td>
+   <td></td>
+   <td></td>
+  </tr>
+    
      </table>
     
     </li>
