--- a/kagami.html
+++ b/kagami.html
@@ -108,7 +108,7 @@ img{
                           <li>1 成果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>2 課題<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                        </ul>
-            <h3>注釈及び引用・参考文献<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+            <h3>注釈及び引用・参考文献<a href ="https://tkby.github.io/micra.github.io/inyosanko.html">→</a></h3>
          </li>
        </ul>
 <footer>
