--- a/kagami.html
+++ b/kagami.html
@@ -113,7 +113,7 @@ img{
        </ul>
 <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/'">トップページ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップページ</button>
 </nav>
   <small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
 
