--- a/youshi.html
+++ b/youshi.html
@@ -35,7 +35,7 @@
 
     </body>
    <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/Learning-by-Viscuit.github.io/kokugo/kokugo.html'">トップへ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
 </nav>
 
 <small>© 2021 Created by Yoshinori Takebayashi</small>
