--- a/kenkyumokuteki.html
+++ b/kenkyumokuteki.html
@@ -17,19 +17,8 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>評価・改善する「情報活用能力」の育成</h1>
-   <table border="1"cellspacing="0" bordercolor="#333" width="100%">
-           <tr align="center">
-             <th width="30%"><b>キーワード</b></th>
-             <th width="70%"><b>要旨</b></th>
-                </tr>
-  
-  <tr>
-   <td>ICT活用　プログラミング教育　情報活用能力　評価・改善　教科横断的な学習　問題解決学習</td>
-   <td>本研究では，プログラミング活動と地域の祭りをデジタルで表現する活動において，本校児童の課題をつかみ，振り返り活動を工夫した授業を行うことで，自らの情報活用を適切に評価・改善する児童を育成できるかを検討した。<br>前者の活動では，振り返りを１単位時間の中で場面を変えて２パターンの授業を設定した。後者の活動では，授業の段階に応じて振り返りを工夫した授業を設定した。活動の効果を分析した結果，どちらの活動でも自ら評価・改善をして，適切な情報活用ができる児童を育むことができ，それぞれの授業の特徴や効果も明らかになった。</td>
-  </tr>
-     </table>
-    
+   <h1>2 研究のもくてき</h1>
+   <p>自らの情報活用を評価・改善する力」を育むために分析の指標を明確にし，ICT活用時の振り返りを工夫し，効果を検証することを通して，自ら評価・改善をして適切な情報活用ができる児童を育成することを目的とした。</p>
     </li>
  </ul>
 
