--- a/kagami.html
+++ b/kagami.html
@@ -46,7 +46,7 @@ img{
                        <li>①国内の動向
                        <li>②「情報活用能力」に関する所属校児童の実態
                     </ul>
-            <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+            <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→</a></h3>
             <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                              <ul>
                                  <li>(1)ICT活用について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
