--- a/kagami.html
+++ b/kagami.html
@@ -47,7 +47,7 @@ img{
                        <li>②「情報活用能力」に関する所属校児童の実態
                     </ul>
             <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→</a></h3>
-            <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+            <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→</a></h3>
                              <ul>
                                  <li>(1)ICT活用について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                                  <li>(2)「評価・改善する『情報活用能力』」について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
