--- a/kagami.html
+++ b/kagami.html
@@ -49,10 +49,11 @@ img{
             <h3>2 研究の目的<a href ="https://tkby.github.io/micra.github.io/kenkyumokuteki.html">→</a></h3>
             <h3>3 先行研究<a href ="https://tkby.github.io/micra.github.io/senkokenkyu.html">→</a></h3>
                              <ul>
-                                 <li>(1)ICT活用について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                                 <li>(2)「評価・改善する『情報活用能力』」について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                                 <li>(1)ICT活用について
+                                 <li>(2)「評価・改善する『情報活用能力』」について
+                                 <li>(3)効果の検証・制作物の分析について
                             </ul>
-             <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+             <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
              <h3>Ⅲ　研究の方法と内容<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
              <h3>Ⅲ-1 プログラミング活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                   <ul>
