--- a/kenkyumokuteki.html
+++ b/kenkyumokuteki.html
@@ -17,7 +17,7 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>2 研究のもくてき</h1>
+   <h1>2 研究の目的</h1>
    <p>自らの情報活用を評価・改善する力」を育むために分析の指標を明確にし，ICT活用時の振り返りを工夫し，効果を検証することを通して，自ら評価・改善をして適切な情報活用ができる児童を育成することを目的とした。</p>
     </li>
  </ul>
